--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="assets/css/default.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
   </head>
   <body>
     <!-- Header-area start -->
@@ -83,7 +84,6 @@
               </div>
             </div>
             <div class="col-xxl-10 col-xl-10 d-flex justify-content-end">
-              
               <div class="main-menu d-none d-xl-block">
                 <nav id="mobile-menu">
                   <ul>
@@ -91,9 +91,7 @@
                     <li><a href="#">Services</a></li>
                     <li><a href="#">About Us</a></li>
                     <li>
-                      <a href="#"
-                        >Blog <i class="fa-solid fa-angle-down"></i
-                      ></a>
+                      <a href="#">Blog</a>
                       <ul class="submenu">
                         <li><a href="#">Blog</a></li>
                         <li><a href="#">Blog Details</a></li>
@@ -135,44 +133,34 @@
     <main>
       <!-- Slider-area start -->
       <section class="slider-area">
-        <div class="slider-active">
+        <div class="slider-actives">
           <div
             class="single-slider slider-height background-image-style position-relative d-flex align-items-center"
-            data-background="assets/images/slider/slider.jpg"
+            data-background="assets/images/slider/slider.png"
           >
             <div class="container">
               <div class="row">
-                <div class="col-xl-7 col-lg-7">
+                <div class="col-xl-6 col-lg-6">
                   <div class="slider-content mt-50">
-                    <h2 data-animation="fadeInUp" data-delay=".3">
-                      Turning plumbing pains into peace of mind
+                    <h2 class="text-capitalize" data-animation="fadeInUp" data-delay=".3">
+                      Achieve <span>glowing</span> skin with Skincare
                     </h2>
                     <p data-animation="fadeInUp" data-delay=".6s">
-                      Lorem ipsum dolor sitamet consectetur adipisicing elit
-                      seddo enim is doloremque laudantium, totam rem aperiam.
+                      Many skincare products promise results, but most contain
+                      additives. At Skincare, we prioritize purity for true skin
+                      health.
                     </p>
-                    <div
-                      class="d-flex"
-                      data-animation="fadeInUp"
-                      data-delay="1.2s"
-                    >
-                      <a href="#" class="btn slider-btn">Get Started</a>
-                      <a
-                        href="#"
-                        class="video-btn popup-video d-flex align-items-center"
-                      >
-                        <i class="bi bi-telephone"></i>
-                        <div class="slider-phone-info">
-                          <h5>Requesting A Call:</h5>
-                          <h4>+88015 475 4247</h4>
-                        </div>
-                      </a>
+                    <div class="slider-btn-action">
+                      <a class="btn slider-btn-one" href="#">Book Appointment</a>
+                      <a class="btn video-btn popup-video" href="https://www.youtube.com/watch?v=5s0Mujwa-r8"
+                        >Watch Video <i class="fa-regular fa-circle-play"></i
+                      ></a>
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-5 col-lg-5 d-none d-lg-block">
+                <div class="col-xl-6 col-lg-6 d-none d-lg-block">
                   <div class="slider-thum">
-                    <img src="assets/images/slider/slider-thum01.png" alt="" />
+                    <img src="assets/images/slider/slider-thum.png" alt="" />
                   </div>
                 </div>
               </div>
